test/error/syn/noSemicolon.tig
let
	var n := 0
	var f := 1     /* o fatorial  */
	var i := 2     /* um contador */
in
	a := v
	v := c;
	printf("Entre com o numero:");
	n := getint()
end
